# TFT_Dial_Indicator

./: CMakeLists.txt  README.txt
cpp/: DataFetcher.cpp  DataFetcher.h  DialWidget.cpp  DialWidget.h  InferenceEngine.cpp  InferenceEngine.h  MainWindow.cpp  MainWindow.h  TrainerInvoker.cpp  TrainerInvoker.h  data_fetcher.cpp  data_fetcher.h  dial_widget.cpp  dial_widget.h  inference_engine.cpp  inference_engine.h  main.cpp  main_window.cpp  main_window.h  trainer_invoker.cpp  trainer_invoker.h
models/: AAPL.pt  BINANCE:BTCUSDT.pt  BINANCEUS:BTCUSDT.pt  COINBASE:BTC-USD.pt  GOOG.pt  KRAKEN:BTCUSD.pt  MSFT.pt  NVDA.pt  QQQ.pt
python/: requirements.txt  train_tft.py
